<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright [2018] [chengjie.jlu@qq.com]
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".activity.LoginActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

    <TextView
            android:id="@+id/login_type"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pwd_login"
            android:textColor="@color/colorBlack"/>

    <TextView
            android:layout_marginTop="60dp"
            android:textSize="25sp"
            android:textColor="@color/colorBlack"
            android:id="@+id/discover"
            android:textAlignment="center"
            android:text="@string/discover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_below="@id/discover"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

        <EditText
                android:id="@+id/phone_number"
                android:theme="@style/edit_text"
                android:inputType="phone"
                android:hint="@string/input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <EditText
                android:layout_marginTop="15dp"
                android:id="@+id/code"
                android:theme="@style/edit_text"
                android:inputType="number"
                android:hint="@string/input_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <Button
                android:layout_marginTop="30dp"
                android:id="@+id/login"
                style="@style/btn_block"
                android:text="@string/verification_code"/>
    </LinearLayout>

    <TextView
            android:padding="15dp"
            android:textAlignment="center"
            android:text="@string/social_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/social_login"/>
    <LinearLayout
            android:id="@+id/social_login"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingRight="50dp"
            android:paddingLeft="50dp"
            android:layout_marginBottom="30dp">
        <ImageView
                android:src="@drawable/qq"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/qq_login"/>
        <ImageView
                android:src="@drawable/weibo"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/weibo_login"/>
        <ImageView
                android:src="@drawable/wechat"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/wechat_login"/>
    </LinearLayout>
</RelativeLayout>